--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,12 @@
 </head>
 
 <body>
-  <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-firestore.js"></script>
+
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
 
-</html>
+</html
